apps/k8s/knarr/prowlarr/prolarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: knarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prowlarr
    spec:

      dnsConfig:
        options:
          - name: ndots
            value: "1"
          - name: single-request-reopen

      containers:
      - name: prowlarr
        image: lscr.io/linuxserver/prowlarr:latest
        ports:
        - containerPort: 9696
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: prowlarr-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: knarr
spec:
  selector:
    app: prowlarr
  ports:
  - port: 80
    targetPort: 9696
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: knarr
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: "14dba35c-b082-4cf5-8319-05b87f07357c.cfargotunnel.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Prowlarr"
    gethomepage.dev/group: "Downloads"
    gethomepage.dev/icon: "prowlarr.png"
    gethomepage.dev/description: "Indexer manager"
spec:
  rules:
  - host: prowlarr.yggdrasil.rip
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              number: 80
